samples/_failures_safe/1761550821_fc61f9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_13bc2e36.c: In function ‘main’:
./samples/SAFE/__tmp_13bc2e36.c:162:5: error: expected expression at end of input
  162 |     dijkstra(&g,
      |     ^~~~~~~~
./samples/SAFE/__tmp_13bc2e36.c:162:5: error: expected declaration or statement at end of input
